main-0-3-12.css
html,
body {
  padding: 0;
  margin: 0;
}

/* ROOT VARIABLES */
:root {
  --header_content_height: 48px;
  --header_content_padding: 4px;
  --header_height: calc(
    var(--header_content_height) + var(--header_content_padding) * 2
  );
  --color2: hsl(177 88% 41% / 1);
}

/* LAYOUT */
#main_container {
  position: relative;
  width: 100%;
  min-height: 100vh;
  left: 0;
  display: flex;
  flex-flow: row wrap;
}
header {
  width: 100%;
}
#sidebar_and_content_container{
  flex-grow: 1;
  display: flex;
}
#sidebar {
  width: 235px;
  min-height: calc(100vh - var(--header_height));
}
#page_content {
  position: relative;
  width: calc(100% - 235px);
  display: flex;
  flex-flow: column;
}
  #tunes_container{
    flex-grow: 1;
    position: relative;
  }

/* HEADER */
header {
  background: #333;
  position: sticky;
  top: 0;
  z-index: 101;
  color: #fff;
  padding: var(--header_content_padding);
  height: var(--header_content_height);
  display: flex;
  justify-content: space-between;
}

#logo img{
  height: var(--header_content_height);
}
#logo.open_homepage{
  cursor: pointer;
  transition: all 200ms;
}
#logo.open_homepage:hover{
  filter: drop-shadow(0px 0px 4px #0cfeb4);
}

#header_buttons_toggle{
  display: none;
  position: absolute;
  right: 8px;
}
  /* 
    show header buttons toggler
    hide header buttons on hidden class (toggler click event)
    header buttons into a drop-down menu
   */
  #header_buttons.hidden{
    display: none !important;
  }
  #header_buttons{
    display: flex;
    flex-flow: column nowrap;
    gap: 8px;
    height: max-content;
    position: absolute;
    right: 0;
    top: var(--header_height);
    background: #333;
    padding-bottom: 8px;
    border-radius: 0 0 8px 8px;
  }

/* HOMEPAGE */
#homepage {
  --h: calc(100vh - var(--header_height) - 8px);
  --w: calc(100% - 235px - 8px);
  position: fixed;
  top: 0px;
  right: 0;
  width: var(--w);
  height: var(--h);
  padding: 8px;
  padding-bottom: 0;
  padding-right: 0;
  overflow-y: scroll;
  background: #fff;
  transition: top 800ms;
  z-index: 99;
}
#close_homepage {
  cursor: pointer;
  position: sticky;
  top: 4px;
  float: right;
  margin-right: 8px;
}
#homepage_content {
  padding: 0 16px;
  color: #333;
}
#homepage::-webkit-scrollbar-track {
  background: #333;
}
/* "Cards" on homepage */
#card_fingerings{
  --color2: hsl(181.97deg 100% 50%);
}
#card_highlights{
  --color2: hsl(64deg 100% 50%);
}
#card_notenames {
  --color2: #4bd130;
}
.cards_container.cols {
  display: flex;
  flex-flow: row wrap;
  gap: 16px;
  justify-content: space-around;
}
.card {
  --hColor: hsl(177 88% 41% / 1);
  background: #333;
  background-image: linear-gradient(to bottom, var(--hColor), var(--hColor)), linear-gradient(to bottom, black 107px, transparent);
  background-size: 100% 57px, 100% 60%;
  background-repeat: no-repeat;
  color: #eee;
  padding: 12px;
  max-width: 200px;
  min-width: 10em;
  flex-grow: 1;
  border-radius: 0 64px;
  position: relative;
  top: 0;
  right: 0;
  box-shadow: 0 0 0 0px var(--color2);
  transition: all 200ms;

}
.card:hover .cardIcon {
  filter: drop-shadow(-4px 4px 2px black);
  top: -2px;
  right: -2px;
}
.card:hover {
  box-shadow: -8px 8px 0px 0px var(--color2);
  top: -8px;
  right: -8px;
}
.card h2 {
  margin: 0;
  padding: 6px 0;
  width: calc(100% - 12px);
  color: #fff;
  font-size: 18px;
  text-shadow: -1px 1px 2px BLACK;
}
.card .cardIcon {
  position: absolute;
  top: 0;
  right: 0;
  height: 54px;
  width: 54px;
  filter: drop-shadow(-2px 2px 2px black);
  color: var(--color2);
  transition: all 200ms;
}
/* first section */
#homepage_content section:first-child h1 {
  text-align: center;
}
#homepage_content section:first-child .speachBubble {
  width: calc(80% - 100px - 24px);
  text-align: center;
  margin-left: 10%;
  position: relative;
  padding: 15px;
  background-color: #ffffff;
  border-radius: 20px;
  filter: drop-shadow(2px 4px 2px black);
}
#homepage_content section:first-child .speachBubble:before {
  content: "";
  position: absolute;
  bottom: 20px;
  right: -20px;
  border-style: solid;
  border-width: 20px 20px 0 0;
  border-color: #ffffff transparent transparent transparent;
}

#homepage footer {
  position: sticky;
  width: 100%;
  bottom: 0;
  margin-left: -8px;
  margin-top: 1em;
}


/* DIALOG */
/* fixed pos */
.ui-dialog.fixed-dialog{
  position: fixed;
}
/* titlebar */
.ui-dialog.alert .ui-dialog-titlebar{
 background: #b91919;
 color: #fff;
}
.ui-dialog.warn .ui-dialog-titlebar{
  background: #b39703;
  color: #fff;
}
/* icon */
.ui-dialog .svg-inline--fa{
  margin-right: 1em;
}
/* buttons */
.ui-dialog.alert .ui-dialog-buttonpane button{
  background: #b91919;
  color: #fff;
}
.ui-dialog.warn .ui-dialog-buttonpane button{
  background: #b39703;
  color: #fff;
}
.ui-dialog .ui-dialog-buttonpane button:hover{
  filter: brightness(1.1);
}

/* SIDEBAR */
#sidebar {
  background: linear-gradient(270deg, #333 0 35px, #222 35px 100%);

  color: #fff;
  position: relative;
  padding-right: 0;
  padding-left: 0;
  user-select: none;
  -webkit-user-select: none;
  z-index: 100;
}

#sidebar :is(h1, h2, h3, h4, h5, h6) {
  cursor: pointer;
  margin: 0;
  padding-bottom: 6px;
}
#sidebar :is(h1, h2, h3) {
  font-size: 16px;
  text-align: center;
}

#sidebar .score_bookmark_section {
  --height: auto;
  height: var(--height);
  width: calc(100% - 14px - 35px);
  list-style-type: none;
  margin: 0;
  margin-top: 12px;
  padding: 4px;
  position: relative;
  border: 3px solid;
  border-radius: 3px;
  overflow: hidden;
}
#sidebar .score_bookmark_section:last-child {
  position: sticky;
  top: var(--header_height);
}

#sidebar .score_bookmark {
  cursor: pointer;
  padding: 6px 0;
  position: relative;
}
#sidebar .score_bookmark::after {
  content: attr(_title);
}
#sidebar .score_bookmark:hover::after {
  color: #888;
}
#sidebar .score_bookmark.active {
  color: #888;
}
#sidebar .score_bookmark.active:hover::after {
  color: #888;
}
/* ... */

